5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1649_1053.log
== TEST (2019-04-05 18:15:07) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == cervo:
	print(patrono + "eh patrono do harry potter")
else:
	print(patrono + "nao eh patrono do harry potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if patrono == cervo:
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:15:22) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == (cervo):
	print(patrono + "eh patrono do harry potter")
else:
	print(patrono + "nao eh patrono do harry potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if patrono == (cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:15:31) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == <cervo>:
	print(patrono + "eh patrono do harry potter")
else:
	print(patrono + "nao eh patrono do harry potter")
-- ERROR:
File "XXXX", line 2
    if patrono == <cervo>:
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:15:48) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == "cervo":
	print(patrono + "eh patrono do harry potter")
else:
	print(patrono + "nao eh patrono do harry potter")
-- OUTPUT:
cervoeh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:15:58) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == "cervo":
	print(patrono + " eh patrono do harry potter")
else:
	print(patrono + " nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 18:16:05) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == "cervo":
	print(patrono + " eh patrono do harry potter")
else:
	print(patrono + " nao eh patrono do harry potter")
-- EXECUTION TIME:
0.152673
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:16:16) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == "cervo":
	print(patrono + " eh patrono do harry potter")
else:
	print(patrono + " nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 18:16:22) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == "cervo":
	print(patrono + " eh patrono do harry potter")
else:
	print(patrono + " nao eh patrono do harry potter")
-- EXECUTION TIME:
0.127634
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 18:16:40) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == "cervo":
	print(patrono + " " + "eh patrono do harry potter")
else:
	print(patrono + " " + "nao eh patrono do harry potter")
-- EXECUTION TIME:
0.134985
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:16:41) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == "cervo":
	print(patrono + " " + "eh patrono do harry potter")
else:
	print(patrono + " " + "nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 18:16:45) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == "cervo":
	print(patrono + " " + "eh patrono do harry potter")
else:
	print(patrono + " " + "nao eh patrono do harry potter")
-- EXECUTION TIME:
0.125088
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:17:11) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == "cervo":
	print(patrono + " " + "eh patrono do harry potter")
else:
	print(patrono + " " + "nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:17:14) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == "cervo":
	print(patrono + " " + "eh patrono do harry potter")
else:
	print(patrono + " " + "nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:01:53) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == "cervo":
	print(patrono + "eh patrono do harry potter")
else:
	print(patrono + "nao eh patrono do harry potter")
-- OUTPUT:
cervoeh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:02:02) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == "cervo":
	print( patrono + "eh patrono do harry potter")
else:
	print( patrono + "nao eh patrono do harry potter")
-- OUTPUT:
cervoeh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:02:10) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == "cervo ":
	print(patrono + "eh patrono do harry potter")
else:
	print(patrono + "nao eh patrono do harry potter")
-- OUTPUT:
cervonao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:02:25) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == "cervo":
	print(patrono + " eh patrono do harry potter")
else:
	print(patrono + " nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:02:29) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == "cervo":
	print(patrono + " eh patrono do harry potter")
else:
	print(patrono + " nao eh patrono do harry potter")
-- EXECUTION TIME:
0.207221
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:02:31) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == "cervo":
	print(patrono + " eh patrono do harry potter")
else:
	print(patrono + " nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:02:49) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == "cervo":
	print(patrono + " eh patrono do Harry Potter")
else:
	print(patrono + " nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:02:54) 
-- CODE:
patrono = input("digite o patrono: ")
if patrono == "cervo":
	print(patrono + " eh patrono do Harry Potter")
else:
	print(patrono + " nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.128777
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
